--- a/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="WpfApplication1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="К лабе 4.2" Height="229" Width="365">
+        Title="К лабе 4.2" Height="250" Width="381">
     <Grid>
         <Menu HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" Width="357">
             <MenuItem Header="Файл" Name="File">
@@ -15,14 +15,14 @@
                 <MenuItem Header="Об авторе" Name="Author"/>
             </MenuItem>
         </Menu>
-        <RadioButton Content="Треугольник по умолчанию" HorizontalAlignment="Left" Margin="10,26,0,0" VerticalAlignment="Top"/>
+        <RadioButton x:Name="radioButton1" Content="Треугольник по умолчанию" HorizontalAlignment="Left" Margin="10,26,0,0" VerticalAlignment="Top"/>
         <RadioButton Content="Задать треугольник по координатам" HorizontalAlignment="Left" Margin="10,46,0,0" VerticalAlignment="Top"/>
         <Label Content="сторона А" HorizontalAlignment="Left" Margin="10,66,0,0" VerticalAlignment="Top" RenderTransformOrigin="-6.184,-2.577" Height="23"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="81,66,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="23" Margin="81,66,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Label Content="сторона B" HorizontalAlignment="Left" Margin="10,94,0,0" VerticalAlignment="Top" RenderTransformOrigin="-6.184,-2.577" Height="23"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="81,94,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="textBox2" HorizontalAlignment="Left" Height="23" Margin="81,94,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Label Content="сторона C" HorizontalAlignment="Left" Margin="10,122,0,0" VerticalAlignment="Top" RenderTransformOrigin="-6.184,-2.577" Height="23"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="81,122,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="textBox3" HorizontalAlignment="Left" Height="23" Margin="81,122,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Label Content="x1=" HorizontalAlignment="Left" Margin="251,26,0,0" VerticalAlignment="Top" Height="23" FontSize="10"/>
         <TextBox HorizontalAlignment="Left" Height="23" Margin="286,26,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="64"/>
         <Label Content="y1=" HorizontalAlignment="Left" Margin="251,54,0,0" VerticalAlignment="Top" Height="23" FontSize="10"/>
@@ -35,7 +35,7 @@
         <TextBox HorizontalAlignment="Left" Height="23" Margin="286,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="64"/>
         <Label Content="y3=" HorizontalAlignment="Left" Margin="251,166,0,0" VerticalAlignment="Top" Height="23" FontSize="10"/>
         <TextBox HorizontalAlignment="Left" Height="23" Margin="286,166,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="64"/>
-        <Button Content="Вычисления" HorizontalAlignment="Left" Margin="10,169,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="bt_OK" Content="Вычисления" HorizontalAlignment="Left" Margin="10,169,0,0" VerticalAlignment="Top" Width="75" Click="bt_OK_Click"/>
 
     </Grid>
 </Window>
