сделайте соответствующие изменения в интерфейсе приложения (поля для хранения площади и периметра также должны быть закрытыми).

--- a/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="WpfApplication1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="К лабе 4.2" Height="250" Width="381">
+        Title="К лабе 4.2" Height="313" Width="381">
     <Grid>
         <Menu HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" Width="357">
             <MenuItem Header="Файл" Name="File">
@@ -35,7 +35,11 @@
         <TextBox x:Name="tx3" HorizontalAlignment="Left" Height="23" Margin="286,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="64" IsEnabled="False"/>
         <Label Content="y3=" HorizontalAlignment="Left" Margin="251,166,0,0" VerticalAlignment="Top" Height="23" FontSize="10"/>
         <TextBox x:Name="ty3" HorizontalAlignment="Left" Height="23" Margin="286,166,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="64" IsEnabled="False"/>
-        <Button x:Name="bt_OK" Content="Вычисления" HorizontalAlignment="Left" Margin="10,169,0,0" VerticalAlignment="Top" Width="75" Click="bt_OK_Click"/>
+        <Button x:Name="bt_OK" Content="Вычисления" HorizontalAlignment="Left" Margin="10,241,0,0" VerticalAlignment="Top" Width="75" Click="bt_OK_Click"/>
+        <Label Content="Площадь" HorizontalAlignment="Left" Margin="37,166,0,0" VerticalAlignment="Top"/>
+        <Label Content="Периметр" HorizontalAlignment="Left" Margin="37,192,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="tPloschad" HorizontalAlignment="Left" Height="23" Margin="108,166,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="93" IsEnabled="False"/>
+        <TextBox x:Name="tPerimetr" HorizontalAlignment="Left" Height="23" Margin="108,194,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="93" IsEnabled="False"/>
 
     </Grid>
 </Window>
